--- a/new.html
+++ b/new.html
@@ -1,2 +1,3 @@
 <h1>learning process</h1>
-<p
+<p>In this section, we will explore the learning process of the model.</p>
+<p>We will cover the following topics:</p>
